welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value move
move match {
^BDR2:24: error: not found: value move
	move();
        ^